# OpenglGraph

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  COPYRIGHT  LICENSE  README.md  buildAssimp命令.txt  cmakeCmd.txt
AndroidEngineApp/: settings.gradle
AndroidEngineApp/app/: build.gradle
AndroidEngineApp/app/src/androidTest/java/com/example/androidengineapp/: ExampleInstrumentedTest.kt
AndroidEngineApp/app/src/main/: AndroidManifest.xml
AndroidEngineApp/app/src/main/assets/: cube2.glb  model_loading_es.fs  model_loading_es.vs  model_loading_es_pbr.fs  pbr.frag  pbr.vert
AndroidEngineApp/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
AndroidEngineApp/app/src/main/cpp/include/: Cylinder.h  EngineAPI.h  OcclusionCullingManager.h  mesh.h  windows_compat.h
AndroidEngineApp/app/src/main/cpp/include/extend/: animator.h
AndroidEngineApp/app/src/main/java/com/example/androidengineapp/: MainActivity.kt  RotationSurfaceView.kt
AndroidEngineApp/app/src/main/res/layout/: activity_main.xml
AndroidEngineApp/app/src/main/res/values/: strings.xml  themes.xml
AndroidEngineApp/app/src/main/res/values-night/: themes.xml
AndroidEngineApp/app/src/test/java/com/example/androidengineapp/: ExampleUnitTest.kt
AndroidEngineApp/gradle/: libs.versions.toml
AndroidEngineApp/gradle/wrapper/: gradle-wrapper.properties
Engine/: CMakeLists.txt  CONTRIBUTING.md  Readme.md
Engine/extend/: animation.h  animdata.h  bone.h  logger.cpp
Engine/include/: Engine.h  ModelObject.h  Plane.h  Primitive.h  RenderObject.h  Skybox.h  Transform.h  entity.h  model.h  shader.h
Engine/src/: Cylinder.cpp  Engine.cpp  EngineAPI.cpp  Engine_Android.cpp  Engine_Desktop.cpp  LineRenderer.cpp  ModelObject.cpp  OcclusionCullingManager.cpp  Plane.cpp  Primitive.cpp  Skybox.cpp  Transform.cpp  camera.cpp  entity.cpp  mesh.cpp  model.cpp  shader.cpp
WindowsEngineApp/: CMakeLists.txt
WindowsEngineApp/include/Engine/: Engine.h  EngineAPI.h  LineRenderer.h  OcclusionCullingManager.h  camera.h  dataType.h  entity.h
WindowsEngineApp/include/extend/: animator.h  bone.h  entity.h  logger.h
WindowsEngineApp/src/: main.cpp
